--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,10 @@
 @import "blocks/base/fonts.scss";
 @import "blocks/base/normalize.scss";
 @import "blocks/base/variables.scss";
+@import "blocks/base/mixins.scss";
 @import "blocks/base/global.scss";
+@import "blocks/page-header/page-header.scss";
+@import "blocks/logo/logo.scss";
+@import "blocks/navigation/navigation.scss";
+@import "blocks/phone/phone.scss";
+@import "blocks/button/button.scss";
