--- a/src/style.scss
+++ b/src/style.scss
@@ -8,3 +8,6 @@
 @import "blocks/navigation/navigation.scss";
 @import "blocks/phone/phone.scss";
 @import "blocks/button/button.scss";
+@import "blocks/page-main/page-main.scss";
+@import "blocks/title/title.scss";
+@import "blocks/table/table.scss";
