--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -7,5 +7,5 @@
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 1px;
-  border: 2px solid $color-black;
+  border: 2px solid #000000;
 }
