--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -9,5 +9,5 @@
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 3px;
-  border: 4px solid $color-black;
+  border: 4px solid #000000;
 }
