--- a/src/blocks/table/table.scss
+++ b/src/blocks/table/table.scss
@@ -5,21 +5,25 @@
   &__header {
     font-family: $futura-pt-medium;
     font-size: 20px;
-    line-height: 70px;
+    line-height: 25px;
     color: $color-black;
     text-align: left;
+    letter-spacing: 1px;
+    padding: 15px 0;
   }
 
   &__column {
     font-family: $pt-sans;
     font-size: 15px;
-    line-height: 22px;
+    line-height: 21px;
     color: $color-black;
     border: 2px solid #000000;
-    text-align: center;
+    box-sizing: border-box;
+    letter-spacing: 1px;
+    padding: 11px 15px;
 
     &--1 {
-      width: 159px;
+      width: 158px;
     }
 
     &--2 {
@@ -27,28 +31,30 @@
     }
 
     &--3 {
-      width: 156px;
+      width: 155px;
     }
 
     &--4 {
-      width: 153px;
+      width: 155px;
     }
 
     &--5 {
-      width: 154px;
+      width: 155px;
     }
 
     &--6 {
-      width: 237px;
+      width: 235px;
     }
   }
 
   &__link {
     font-family: $futura-pt-heavy;
     font-size: 15px;
-    line-height: 65.16px;
+    line-height: 22px;
     color: $color-green;
     text-decoration: none;
     text-transform: uppercase;
+    display: block;
+    text-align: center;
   }
 }
