--- a/src/blocks/table/table.scss
+++ b/src/blocks/table/table.scss
@@ -1,6 +1,6 @@
 .table {
   border-collapse: collapse;
-  // width: 100%;
+  margin-bottom: 36px;
 
   &__header {
     font-family: $futura-pt-medium;
