--- a/src/style.scss
+++ b/src/style.scss
@@ -11,3 +11,4 @@
 @import "blocks/page-main/page-main.scss";
 @import "blocks/title/title.scss";
 @import "blocks/table/table.scss";
+@import "blocks/offer/offer.scss";
