--- a/src/blocks/offer/offer.scss
+++ b/src/blocks/offer/offer.scss
@@ -1,21 +1,27 @@
 .offer {
   border: 2px solid #000000;
   display: flex;
+  padding-bottom: 7px;
 
   &__item {
+    box-sizing: border-box;
+
     &:first-of-type {
       width: 300px;
       padding: 50px 42px 30px 59px;
-      box-sizing: border-box;
       position: relative;
+      margin-right: 35px;
     }
 
     &:nth-of-type(2) {
       width: 550px;
+      padding: 44px 22px;
+      margin-right: 10px;
     }
 
     &:last-of-type {
       width: 260px;
+      padding: 28px 56px 15px 68px;
     }
   }
 
@@ -36,11 +42,75 @@
     display: block;
     text-align: center;
     position: absolute;
-    bottom: 22px;
+    bottom: 104px;
     left: 58px;
     width: 200px;
     box-sizing: border-box;
     padding: 7px 10px;
     letter-spacing: 2px;
+  }
+
+  &__title {
+    padding: 0;
+    margin: 0;
+    font-family: $futura-pt-heavy;
+    font-size: 30px;
+    line-height: 35px;
+    color: $color-black;
+    word-spacing: 1px;
+    margin-bottom: 6px;
+  }
+
+  &__date {
+    margin: 0;
+    font-family: $pt-sans;
+    font-size: 15px;
+    line-height: 25px;
+    color: $color-black;
+    padding: 3px;
+    letter-spacing: 1px;
+    margin-bottom: 9px;
+  }
+
+  &__subtitle {
+    margin: 0;
+    font-family: $futura-pt-medium;
+    font-size: 20px;
+    line-height: 25px;
+    color: $color-black;
+    padding: 3px;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+  }
+
+  &__text {
+    margin: 0;
+    font-family: $pt-sans;
+    font-size: 15px;
+    line-height: 22px;
+    color: $color-black;
+    padding: 5px 43px 8px 0;
+    letter-spacing: 1px;
+    margin-bottom: 9px;
+  }
+
+  &__link {
+    font-family: $pt-sans;
+    font-size: 15px;
+    line-height: 22px;
+    color: $color-black;
+    text-decoration: none;
+    border-bottom: 2px solid $color-green;
+    letter-spacing: 1px;
+    padding-bottom: 5px;
+  }
+
+  &__price {
+    font-family: $futura-pt-medium;
+    font-size: 30px;
+    line-height: 70px;
+    color: $color-black;
+    letter-spacing: 1px;
+    margin-bottom: 16px;
   }
 }
