--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -12,4 +12,12 @@
   &--offer {
     padding: 10px 34px;
   }
+
+  &--form {
+    margin: 0 auto;
+    display: block;
+    background: #ffffff;
+    padding: 10px 19px;
+    cursor: pointer;
+  }
 }
