--- a/src/style.scss
+++ b/src/style.scss
@@ -12,3 +12,5 @@
 @import "blocks/title/title.scss";
 @import "blocks/table/table.scss";
 @import "blocks/offer/offer.scss";
+@import "blocks/pagination/pagination.scss";
+@import "blocks/form/form.scss";
