--- a/src/style.scss
+++ b/src/style.scss
@@ -14,3 +14,5 @@
 @import "blocks/offer/offer.scss";
 @import "blocks/pagination/pagination.scss";
 @import "blocks/form/form.scss";
+@import "blocks/page-footer/page-footer.scss";
+@import "blocks/social/social.scss";
