--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -1,5 +1,4 @@
 .logo {
-  height: 35px;
   margin-right: 28px;
   padding: 6px 17px;
   font-size: 25px;
@@ -10,4 +9,10 @@
   text-decoration: none;
   letter-spacing: 3px;
   border: 4px solid #000000;
+
+  &--footer {
+    border: 0;
+    padding: 6px 21px;
+    margin-right: 39px;
+  }
 }
