--- a/src/blocks/phone/phone.scss
+++ b/src/blocks/phone/phone.scss
@@ -6,4 +6,10 @@
   color: $color-black;
   text-decoration: none;
   letter-spacing: 1px;
+
+  &--footer {
+    padding: 0;
+    padding-top: 3px;
+    letter-spacing: 2px;
+  }
 }
